// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon"
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable"
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable"
  isClickable={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-active"
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  isClickable={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;
